[gd_scene load_steps=3 format=3 uid="uid://gfvuq0gtqyfl"]

[ext_resource type="Texture2D" uid="uid://der4pydg4iaqv" path="res://texturess/finnish-anti-aircraft-gun-1944-adf8d5.jpg" id="1_73f0v"]
[ext_resource type="Script" path="res://menu_2d.gd" id="1_w3gwc"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_w3gwc")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(1.26984, 1.41093)
texture = ExtResource("1_73f0v")
centered = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_top = 289.0
offset_right = 1278.0
offset_bottom = 1092.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Niveau 1"
icon_alignment = 1

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Niveau 2"
icon_alignment = 1

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Niveau 3"
icon_alignment = 1

[node name="Button4" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Niveau 4"
icon_alignment = 1

[node name="Button7" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Mode survie"
icon_alignment = 1

[node name="Button5" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Cr√©dits"
icon_alignment = 1

[node name="Button6" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Quitter le jeu"
icon_alignment = 1

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="VBoxContainer/Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="VBoxContainer/Button7" to="." method="_on_button_7_pressed"]
[connection signal="pressed" from="VBoxContainer/Button5" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="VBoxContainer/Button6" to="." method="_on_button_6_pressed"]
